<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidGuide</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_manu">ManuActivity</string>
    <string name="title_activity_list_diseases">ListDiseasesActivity</string>
    <string name="title_activity_pharmaceutical">PharmaceuticalActivity</string>
    <string name="title_activity_aid">AIDActivity</string>
    <string name="title_activity_hospital">HospitalActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_medicine_traditional">MedicineTraditionalActivity</string>
    <string name="title_activity_list_hospital">ListHospitalActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_data_diseases">Data_diseasesActivity</string>
    <string name="title_activity_data_pharmaceutical">Data_pharmaceuticalActivity</string>
    <string name="title_activity_data_medicinetraditional">Data_medicinetraditionalActivity</string>
    <string name="title_activity_data_aid">Data_aidActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="test">test</string>
    <string name="strGlobalknowledge">Knowledge</string>
    <string name="strGlobalDiseases">Diseases</string>
    <string name="strGlobalMedicineModern">Medicine Modern</string>
    <string name="strGlobalMedicineTraditional">Medicine Traditional</string>
    <string name="strGlobalFirstAid">First Aid</string>
    <string name="strGlobalHospital">Hospital</string>
    <string name="strGlobalAboutDeveloper">About Developer</string>


    <string name="strCystitis">Cystitis</string>
    <string name="strGastroesophagealRefluxDisease">Gastroesophageal Reflux Disease</string>
    <string name="strTineaCorporis">Tinea Corporis</string>
    <string name="strTineaVesicolor">Tinea Vesicolor</string>
    <string name="strHordeolum">Hordeolum</string>
    <string name="strCommonCold">Common Cold</string>
    <string name="strNauseaVomitting">Nausea/Vomitting</string>
    <string name="strTineapedis">Tineapedis</string>
    <string name="strTineaungium">Tineaungium</string>
    <string name="strLeukorrhea">Leukorrhea</string>
    <string name="strConstipation">Constipation</string>
    <string name="strDiarrhea">Diarrhea</string>
    <string name="strDysmenorrhea">Dysmenorrhea</string>
    <string name="strToothache">Toothache</string>
    <string name="strMigraine">Migraine</string>
    <string name="strImpetigo">Impetigo</string>
    <string name="strEczema">Eczema</string>
    <string name="strAphthousUlcer">Aphthous Ulcer</string>
    <string name="strPoisoningfromPesticides">Poisoning from Pesticides</string>
    <string name="strSuppurativeWoundInfection">Suppurative Wound Infection</string>
    <string name="strPepticUlcer">Peptic Ulcer</string>
    <string name="strGnathostomiasis">Gnathostomiasis</string>
    <string name="strHerpesSimplex">Herpes Simplex</string>
    <string name="strEpistaxis">Epistaxis</string>
    <string name="strUrticaria">Urticaria</string>
    <string name="strGingivalBleeding">Gingival Bleeding</string>
    <string name="strVertigo">Vertigo</string>
    <string name="strMeasles">Measles</string>
    <string name="strScabiasis">Scabiasis</string>
    <string name="strGermanMeasles">German Measles</string>

    <string name="strProvinceBangkok">Province Bangkok</string>
    <string name="strProvinceNonthaburi">Province Nonthaburi</string>
    <string name="strProvincePathumThani">Province PathumThani</string>
    <string name="strProvinceSamutPrakan">Province SmutPrakan</string>
    <string name="strProvinceKamphaengPhet">Province KamphaengPhet</string>
    <string name="strProvinceChainat">Province ChaiNat</string>
    <string name="strProvinceNakhonNayok">Province NakhonNayok</string>
    <string name="strProvinceNakhonPathom">Province NakhonPathom</string>
    <string name="strProvinceNakhonSawan">Province NakhonSawan</string>
    <string name="strProvincePhraNakhonSriAyutthaya">Province PhraNakhonSriAyutthaya</string>
    <string name="strProvincePichit">Province Pichit</string>
    <string name="strProvincePhitsanulok">Province Phitsanulok</string>
    <string name="strProvincePhetchabun">Province Phetchabun</string>
    <string name="strProvinceLopburi">Province Lopburi</string>
    <string name="strProvinceSamutSongkhram">Province SamutSongkhram</string>
    <string name="strProvinceSamutsakorn">Province Samutsakorn</string>
    <string name="strProvinceSingburi">Province Singburi</string>
    <string name="strProvinceSukhothai">Province Sukhothai</string>
    <string name="strProvinceSuphanBuri">Province SuphanBuri</string>
    <string name="strProvinceSaraburi">Province Saraburi</string>
    <string name="strProvinceAngThong">Provinc AngThong</string>
    <string name="strProvinceUthaiThani">Province UthaiThani</string>
    <string name="strProvinceChiangRai">Province ChiangRai</string>
    <string name="strProvinceChiangMai">Province ChiangMai</string>
    <string name="strProvinceNan">Province Nan</string>
    <string name="strProvincePayao">Province Payao</string>
    <string name="strProvincePhrae">Province Phrae</string>
    <string name="strProvinceMaeHongSon">Province MaeHongSon</string>
    <string name="strProvinceLampang">Province Lampang</string>
    <string name="strProvinceLamphun">Province Lamphun</string>
    <string name="strProvinceUttaradit">Province Uttaradit</string>
    <string name="strProvinceChanthaburi">Province Chanthaburi</string>
    <string name="strProvinceChachoengsao">Province Chachoengsao</string>
    <string name="strProvinceChonBuri">Province ChonBuri</string>
    <string name="strProvinceTrad">Province Trad</string>
    <string name="strProvincePrachinburi">Province Prachinburi</string>
    <string name="strProvinceRayong">Province Rayong</string>
    <string name="strProvinceSaKaeo">Province SaKaeo</string>
    <string name="strProvinceKanchanaburi">Province Kanchanaburi</string>
    <string name="strProvinceTak">Province Tak</string>
    <string name="strProvincePrachuapKhiriKhan">Province PrachuapKhiriKhan</string>
    <string name="strProvincePhetchaburi">Province Phetchaburi</string>
    <string name="strProvinceRatchaburi">Province Ratchaburi</string>
    <string name="strProvinceKrabi">Province Krabi</string>
    <string name="strProvinceChumphon">Province Chumphon</string>
    <string name="strProvinceTrang">Province Trang</string>
    <string name="strProvinceNakhonSiThammarat">Province NakhonSiThammarat</string>
    <string name="strProvinceNarathiwat">Province Narathiwat</string>
    <string name="strProvincePattani">Province Pattani</string>
    <string name="strProvincePhangnga">Province Phangnga</string>
    <string name="strProvincePhatthalung">Province Phatthalung</string>
    <string name="strProvincePhuket">Province Phuket</string>
    <string name="strProvinceRanong">Province Ranong</string>
    <string name="strProvinceSatun">Province Satun</string>
    <string name="strProvinceSongkhla">Province Songkhla</string>
    <string name="strProvinceSuratThani">Province SuratThani</string>
    <string name="strProvinceYala">Province Yala</string>
    <string name="strProvinceKalasin">Province Kalasin</string>
    <string name="strProvinceKhonKaen">Province KhonKaen</string>
    <string name="strProvinceChaiyaphum">Province Chaiyaphum</string>
    <string name="strProvinceNakhonPhanom">Province NakhonPhanom</string>
    <string name="strProvinceNakhonRatchasima">Province NakhonRatchasima</string>
    <string name="strProvinceBungKan">Province BungKan</string>
    <string name="strProvinceBuriram">Province Buriram</string>
    <string name="strProvinceMahaSarakham">Province MahaSarakham</string>
    <string name="strProvinceMukdahan">Province Mukdahan</string>
    <string name="strProvinceYasothon">Province Yasothon</string>
    <string name="strProvinceRoiEt">Province RoiEt</string>
    <string name="strProvinceLoei">Province Loei</string>
    <string name="strProvinceSakonNakhon">Province SakonNakhon</string>
    <string name="strProvinceSurin">Province Surin</string>
    <string name="strProvinceSisaket">Province Sisaket</string>
    <string name="strProvinceNongkhai">Province Nongkhai</string>
    <string name="strProvinceNongbualamphu">Province Nongbualamphu</string>
    <string name="strProvinceUdonThani">Province UdonThani</string>
    <string name="strProvinceUbonRatchathani">Province UbonRatchathani</string>
    <string name="strProvinceAmnatCharoen">Province AmnatCharoen</string>

    <string name="strDataAboutDeveloper">แอพพลิเคชั่นพัฒนาโดยนักศึกษาปริญญานิพนธ์จากมหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ\nเสนอโดย\nนางสาวพัชรา มาตย์สถิตย์ และ นางสาวปวีณา จำมะเทวี\nโดยมีอาจารย์ที่ปรึกษาหลักผู้ให้คำปรึกษาด้านการทำปริญญานิพนธ์คือ\nนางฐิติมา ช่วงชัย\nที่ปรึกษาร่วมผู้ให้คำปรึกษาและตรวจสอบด้านข้อมูลโรคทั้ง 30โรค
    คือ\nเภสัชกรหญิงกชรัตน์ ชีวพฤกษ์\nข้อมูลโรคภายในแอพพลิเคชั่นได้นำข้อมูลมาจากหนังสือ\nรู้ทันโรครู้ทันหมอ เล่ม 1 และ รู้ทันโรครู้ทันหมอ เล่ม 2
    \nผู้เขียน คือ นายแพทย์พินิจ ลิ้มสุคนธ์</string>

    <string name="strDataknowlage1">โรค เป็นสภาวะผิดปกติของร่างกายหรือจิตใจของสิ่งมีชีวิต ซึ่งทำให้การทำงานของร่างกายเสียไปหรืออาจทำให้เกิดอันตรายถึงชีวิต
        โรคยังอาจหมายถึงภาวะการทำงานของร่างกายซึ่งทำให้เกิดอันตรายแก่ตัวเองซึ่งจะแสดงออกมาเป็นอาการหรืออาการแสดงต่อโรคนั้นๆ</string>

    <string name="google_maps_key">AIzaSyCQ07D9pwr1O1ZQPesTPPrnpPJubd81yA8</string>

    <string-array name="strTitleProvince">
        <item>ปริมณฑล</item>
        <item>ภาคกลาง</item>
        <item>ภาคเหนือ</item>
        <item>ภาคใต้</item>
        <item>ภาคตะวันออก</item>
        <item>ภาคตะวันตก</item>
        <item>ภาคตะวันออกเฉียงเหนือ</item>
    </string-array>
</resources>
