<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_knowledge"
            android:icon="@drawable/ic_info"
            android:title="@string/strGlobalknowledge" />

        <item
            android:id="@+id/menu_diseases"
            android:icon="@drawable/ic_diseases"
            android:title="@string/strGlobalDiseases" />
        <item
            android:id="@+id/menu_medmodern"
            android:icon="@drawable/ic_medmodern"
            android:title="@string/strGlobalMedicineModern" />
        <item
            android:id="@+id/menu_medtraditional"
            android:icon="@drawable/ic_medtraditional"
            android:title="@string/strGlobalMedicineTraditional" />
        <item
            android:id="@+id/menu_firstaid"
            android:icon="@drawable/ic_firstaid"
            android:title="@string/strGlobalFirstAid" />
        <item
            android:id="@+id/menu_hospital"
            android:icon="@drawable/ic_hospital"
            android:title="@string/strGlobalHospital" />
        
    </group>

    <group android:id="@+id/group_developer"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_developer"
            android:icon="@drawable/ic_developer"
            android:title="@string/strGlobalAboutDeveloper" />
    </group>

        <!--<item-->
            <!--android:id="@+id/menu_copydb"-->
            <!--android:icon="@drawable/ic_developer"-->
            <!--android:title="copy db" />-->



</menu>
